---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"impl Test { fn test<T: Numeric>() -> void {} }\")"
---
SOURCE_FILE@0..46
  IMPL@0..46
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
    NAMED_TYPE@5..10
      PATH@5..10
        PATH_TYPE@5..10
          NAME@5..9
            IDENT@5..9 "Test"
          WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    WHITESPACE@11..12 " "
    METHOD@12..44
      SIG@12..42
        FN_KW@12..14 "fn"
        WHITESPACE@14..15 " "
        NAME@15..19
          IDENT@15..19 "test"
        BOUND_TYPES@19..31
          LESS@19..20 "<"
          BOUND_TYPE@20..30
            NAME@20..21
              IDENT@20..21 "T"
            CONSTRAINTS@21..30
              COLON@21..22 ":"
              WHITESPACE@22..23 " "
              NAMED_TYPE@23..30
                PATH@23..30
                  PATH_TYPE@23..30
                    NAME@23..30
                      IDENT@23..30 "Numeric"
          GREATER@30..31 ">"
        PARAM_LIST@31..33
          LEFT_PAREN@31..32 "("
          RIGHT_PAREN@32..33 ")"
        WHITESPACE@33..34 " "
        RETURN_TYPE@34..42
          ARROW@34..36 "->"
          WHITESPACE@36..37 " "
          NAMED_TYPE@37..42
            PATH@37..42
              PATH_TYPE@37..42
                NAME@37..41
                  IDENT@37..41 "void"
                WHITESPACE@41..42 " "
      BLOCK@42..44
        LEFT_BRACE@42..43 "{"
        RIGHT_BRACE@43..44 "}"
    WHITESPACE@44..45 " "
    RIGHT_BRACE@45..46 "}"
